--- a/EventViewer/Views/Home/Index.cshtml
+++ b/EventViewer/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Global Azure Bootcamp 2018";
+    ViewData["Title"] = "Global Integration Bootcamp 2019";
 }
 
 <div>
     <p style="float: left; font-size: 24px;" class="lead">
-        <img src="~/images/azurebootcamp.jpg" height="90" width="90" alt="Global Azure Bootcamp 2018" />
+        <img src="~/images/eventlogo.png" height="90" width="90" alt="Global Integration Bootcamp 2019" />
         <strong>Visor Eventos</strong>
         <button class="btn btn-danger btn-xs" id="delete">
             <span class="glyphicon glyphicon-trash"></span>
