--- a/EventViewer/Views/Shared/_Layout.cshtml
+++ b/EventViewer/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - Global Integration Bootcamp</p>
+            <p>&copy; 2019 - Net Core Conf 2019</p>
         </footer>
     </div>
 
